# design-tool-app

./: README.md
backend/: .env  .gitignore  READMD.ME  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: design.py
backend/app/core/: ai_service.py  cache.py  cache_utils.py  config.py  design_service.py
backend/app/models/: design.py
backend/app/schemas/: design.py
frontend/: README.md  netlify.toml  package.json  pnpm-lock.yaml
frontend/src/__tests__/: ButtonPreview.test.tsx
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/api/gemini/: route.ts
frontend/src/components/AIDesign/: AiDesign.module.scss  AiDesign.tsx
frontend/src/components/AIOptimizer/: AIOptimizer.module.scss  AIOptimizer.tsx
frontend/src/components/Button/: Button.module.scss  ButtonCodeGenerator.tsx  ButtonOptions.tsx  ButtonPreview.tsx
frontend/src/components/Card/: Card.module.scss  CardCode.tsx  CardCodeGenerator.tsx  CardOptions.tsx  CardPreview.tsx
frontend/src/components/Generator/: Generator.module.scss  Generator.tsx
frontend/src/components/Navbar/: Navbar.module.scss  NavbarCodeGenerator.tsx  NavbarOptions.tsx  NavbarPreview.tsx
frontend/src/components/TrendDesign/: TrendDesign.module.scss  TrendDesign.tsx
frontend/src/services/: api.ts
frontend/src/store/: useComponentStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: CodeDisplay.tsx
frontend/src/utils/codeGenerators/: CodeGeneratorUtils.tsx
